# opencl_vanity_gpg

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: build.yml
src/: main.rs  shader.cl  vanity_gpg.rs
src/utils/: args.rs  device.rs  hash_pattern.rs  mod.rs  pattern.rs  vanity_secret_key.rs
