[package]
name = "opencl_vanity_gpg"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
clap = { version = "4.5.23", features = ["derive"] }
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "humantime"] }
hex = "0.4.3"
log = "0.4.22"
ocl = "0.19.7"
pgp = "0.14.2"
rand = "0.8.5"
smallvec = "1.13.2"
