[package]
name = "opencl_vanity_gpg"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
panic = "abort"
strip = true

[dependencies]
byteorder = "1.5"
chrono = { version = "0.4", default-features = false, features = ["now"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
hex = "0.4"
log = "0.4"
ocl = "0.19"
pgp = "0.14"
rand = "0.8"
smallvec = "1.13"
anyhow = "1.0"
indicatif = "0.17"
